@@ -1,3 +1,5 @@
+2014-11-17 : Post date stored correctly for PP assignment (thanks to Michael Aherne).
+2014-11-17 : Post dates not updated for future PP assignments
 2014-11-17 : Anonymous marking reveal form fixed and now initialises correctly on inbox load.
 2014-11-17 : Incorrect repository value fixed when synching assignments in Plagiarism plugin.
 2014-11-17 : Assignment title length check added on Turnitin assignments.
